# spotmicro

./: .gitignore  LICENSE  MODULE.bazel  README.md  requirements.txt  setup_project.sh
kinematics/:  main.py  BUILD  kinematics.py
simulation/: BUILD  example.py  kinematics.py  requirements.txt  simulation.py  simulation_agent.py  simulation_main.py  simulation_scenario.py  spotmicroai.py
simulation/robot_model/: spot.xml
teleop/: BUILD  device_manager.py  event_handler.py  input_controller.py  requirements.in  requirements.txt  teleop.py  test_example.py
tools/: BUILD  py_lint.py  requirements.txt
