module(
    name = "spot_marley"
)

#### rules_python ####
bazel_dep(name = "rules_python", version = "0.25.0")

python = use_extension("@rules_python//python/extensions:python.bzl", "python")

python.toolchain(
    python_version = "3.9",
    is_default=True
)

pip = use_extension("@rules_python//python/extensions:pip.bzl", "pip")

#### simulation dependencies ####
pip.parse(
    hub_name = "simulation_pip",
    python_version = "3.9",
    requirements_lock = "//simulation:requirements.txt",
)

use_repo(pip, "simulation_pip")