module(
    name = "spot_marley",
)

#### bazel tools ####

bazel_dep(
    name = "buildifier_prebuilt",
    version = "6.3.3",
    dev_dependency = True,
)

#### rules_python ####
bazel_dep(name = "rules_python", version = "0.25.0")

python = use_extension("@rules_python//python/extensions:python.bzl", "python")
python.toolchain(
    is_default = True,
    python_version = "3.9",
)

pip = use_extension("@rules_python//python/extensions:pip.bzl", "pip")

#### simulation dependencies ####
pip.parse(
    hub_name = "simulation_pip",
    python_version = "3.9",
    requirements_lock = "//simulation:requirements.txt",
)
use_repo(pip, "simulation_pip")
